chore: add multi jdk complie and run support with IDEA